syntax = "proto3";

package decomposition;

option java_package = "com.tenetmind.decomposition";
option java_multiple_files = true;

message PrimeNumberDecompositionRequest {
  int32 number = 1;
}

message PrimeNumberDecompositionResponse {
  int32 partialResult = 1;
}

service PrimeNumberDecompositionService {
  rpc decompose(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
}
